--- a/src/static/include/head.html
+++ b/src/static/include/head.html
@@ -4,14 +4,14 @@
     <title>Material Admin</title>
 
     <!-- Vendor CSS -->
-    <link href="vendors/bower_components/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
-    <link href="vendors/bower_components/animate.css/animate.min.css" rel="stylesheet">
-    <link href="vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
+    <link href="assets/vendors/bower_components/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
+    <link href="assets/vendors/bower_components/animate.css/animate.min.css" rel="stylesheet">
+    <link href="assets/vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
         rel="stylesheet">
-    <link href="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css"
+    <link href="assets/vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css"
         rel="stylesheet">
-    <link href="vendors/bower_components/google-material-color/dist/palette.css" rel="stylesheet">
+    <link href="assets/vendors/bower_components/google-material-color/dist/palette.css" rel="stylesheet">
 
     <!-- CSS -->
-    <link href="css/app.min.1.css" rel="stylesheet">
-    <link href="css/app.min.2.css" rel="stylesheet">
+    <link href="assets/css/app.min.1.css" rel="stylesheet">
+    <link href="assets/css/app.min.2.css" rel="stylesheet">
