--- a/src/static/include/header.html
+++ b/src/static/include/header.html
@@ -84,7 +84,7 @@
             <a href=""><i class="hm-icon zmdi zmdi-notifications"></i></a>
         </li>
         <li class="dropdown hm-profile">
-            F<ul class="dropdown-menu pull-right dm-icon">
+            <ul class="dropdown-menu pull-right dm-icon">
                 <li>
                     <a href="profile-about.html"><i class="zmdi zmdi-account"></i> View Profile</a>
                 </li>
