--- a/src/assets/css/app.min.2.css
+++ b/src/assets/css/app.min.2.css
@@ -83,7 +83,7 @@
 
 [data-ma-header="teal"]:before,
 [data-ma-header="teal"] #header {
-  background-color: #17344ad6;
+  background-color: #3f51b5;
 }
 
 [data-ma-header="teal"] .smm-alerts > li.active,
@@ -230,7 +230,7 @@ a.thumbnail.active {
 
 @media screen and (min-width: 768px) and (max-width: 1499px) {
   #c-grid[data-columns]::before {
-    content: '3 .column.size-1of3';
+    content: '3 .column.size-1of2';
   }
 }
 
